--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "capstone"]
 	path = capstone
-	url = https://github.com/stevemk14ebr/capstone
+	url = https://github.com/stevemk14ebr/capstone.git
